# rocketpdf

./: README.md  pyproject.toml
rocket-pdf/: __init__.py.py  doc_parser.py  example.docx  main.py  pdf_model.py
rocketpdf/: __init__.py  rocketpdf.py
rocketpdf/doc_parser/: __init__.py  doc_parser.py
rocketpdf/doc_parser/utils/: __init__.py  decorator.py  system.py  types.py
tests/: Document_Formatted_Text.docx  Document_with_Basic_Text.docx  Document_with_Multiple_Columns.docx
tests/test_parsedoc/: Indentation.docx  Tables.docx
tests/test_parsepdf/output/: Basic_Text.docx  Formatted_Text.docx  Indentation.docx  Tables.docx
