[tool.poetry]
name = "rocket-pdf"
version = "0.1.0"
description = "CLI for handling pdf files"
authors = ["Alex Garcia <alexgarciat00@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.24.5"
pypandoc = "^1.13"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
