[tool.poetry]
name = "rocketpdf"
version = "0.1.2"
description = "Comprehensive CLI tool for pdf handling"
authors = ["D4ario0 <alexgarciat00@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.24.5"
docx2pdf = "^0.1.8"
pdf2docx = "^0.5.8"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rocketpdf = "rocketpdf:rocketpdf"
